--- a/backend/config/database_example.yml
+++ b/backend/config/database_example.yml
@@ -22,8 +22,8 @@ default: &default
 development:
   <<: *default
   database: smart_agent
-  username: development
-  password: development
+  username: username
+  password: password
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
