Configure database credentials

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -32,4 +32,5 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
+# Ignore database configuration file used to define database settings 
 /config/database.yml
