--- a/backend/config/database_example.yml
+++ b/backend/config/database_example.yml
@@ -21,9 +21,9 @@ default: &default
 
 development:
   <<: *default
-  database: smart_agent
-  username: username
-  password: password
+  database: smart_agent_development
+  username: development
+  password: development
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
@@ -55,9 +55,11 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: backend_test
+# test:
+#   <<: *default
+#   database: backend_test
+#   username: development
+#   password: development
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -82,5 +84,5 @@ test:
 production:
   <<: *default
   database: backend_production
-  username: backend
+  username: development
   password: <%= ENV["BACKEND_DATABASE_PASSWORD"] %>
