change routes for login and logout and change the seeds

--- a/backend/config/database.yml
+++ b/backend/config/database.yml
@@ -22,8 +22,8 @@ default: &default
 development:
   <<: *default
   database: smart_agent_development
-  username: development
-  password: development
+  username: svaronc
+  password: Vida1394
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
