--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.8",
+    "dompurify": "^3.0.11",
     "formik": "^2.4.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
