--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "actioncable": "^5.2.8-1",
     "axios": "^1.6.8",
     "dompurify": "^3.0.11",
     "formik": "^2.4.5",
