Install ReactTimeAgo package. Update time format in TicketInbox and Conversation components.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.8",
     "dompurify": "^3.0.11",
     "formik": "^2.4.5",
+    "javascript-time-ago": "^2.5.9",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
@@ -22,6 +23,7 @@
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.3",
+    "react-time-ago": "^7.3.1",
     "sort-by": "^1.2.0",
     "yup": "^1.4.0"
   },
