--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
+    "react-resizable-panels": "^2.0.16",
     "react-router-dom": "^6.22.3",
     "react-time-ago": "^7.3.1",
     "sort-by": "^1.2.0",
