--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-resizable-panels": "^2.0.16",
     "react-router-dom": "^6.22.3",
     "react-time-ago": "^7.3.1",
+    "react-tooltip": "^5.26.3",
     "sort-by": "^1.2.0",
     "turndown": "^7.1.3",
     "yup": "^1.4.0"
