--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,14 @@
     "@react-oauth/google": "^0.12.1",
     "actioncable": "^5.2.8-1",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
     "dompurify": "^3.0.11",
     "formik": "^2.4.5",
     "javascript-time-ago": "^2.5.9",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
