--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@rollup/plugin-replace": "^5.0.5",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
