--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "flowise-embed": "^1.2.1",
     "flowise-embed-react": "^1.0.2",
     "formik": "^2.4.5",
+    "framer-motion": "^11.1.5",
     "javascript-time-ago": "^2.5.9",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
